python/ql/test/extractor-tests/syntax_error/eof.py

import unittest

#This should cause a syntax error at the end of line 8

class TestBase(unittest.TestCase):

    
